[package]
name = "flcavr2"
version = "0.1.0"
authors = ["Lucas Xie <79682953+pocketrice@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "flcavr2"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
#nb = "1.1.0"
embedded-hal = "1.0"
embedded-alloc = "0.6.0"
avr-device = { version = "0.7.0", features = ["critical-section-impl"]} # <-- necessary for avoiding avr-gcc linker error (obscure forum post legitimately cannot find anymore soz ^^')
fchashmap = "0.1.3"
priority-queue = { version = "2.3.1", default-features = false }

#[build-dependencies]
#phf = { version = "0.11.3", default-features = false }
#phf_codegen = "0.11.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
